@@ -11,6 +11,7 @@ Build-Depends: at-spi2-core,
                autoconf-archive,
                dbus (>= 1.8),
                debhelper (>= 11),
+               dh-exec,
                dh-python,
                docbook-xsl,
                dpkg-dev (>= 1.16.1~),
