@@ -1,1 +1,2 @@
-usr/lib/python3*/*-packages/gi/_gi_cairo.*-3[0-9]m-*.so
+#! /usr/bin/dh-exec
+usr/lib/python3*/*-packages/gi/_gi_cairo.*-3*[0-9m]-${DEB_HOST_MULTIARCH}.so
