@@ -1,1 +1,2 @@
-usr/lib/python3*/*-packages/gi/*-3[0-9]dm-*.so
+#! /usr/bin/dh-exec
+usr/lib/python3*/*-packages/gi/*.cpython-*d*-${DEB_HOST_MULTIARCH}.so
