@@ -1,4 +1,5 @@
-usr/lib/python3*/*-packages/gi/_gi.*-3[0-9]m-*.so
+#! /usr/bin/dh-exec
+usr/lib/python3*/*-packages/gi/_gi.cpython-3*[0-9m]-${DEB_HOST_MULTIARCH}.so
 usr/lib/python3*/*-packages/gi/*.py
 usr/lib/python3*/*-packages/gi/*/*.py
 usr/lib/python3*/*-packages/*.egg-info
