@@ -42,6 +42,10 @@ ifeq ($(DEB_HOST_ARCH_OS), linux)
 endif
 endif
 
+override_dh_python3:
+	dh_python3 -O--buildsystem=pybuild
+	find debian/python3-gi-cairo  debian/python3-gi -name '*.cpython-*dm-*so' | xargs -r rm -fv
+
 override_dh_auto_install:
 	dh_auto_install
 	mkdir debian/tmp/usr/lib/$(DEB_HOST_MULTIARCH)
